common/logs/run_council.err
  File "/root/projects/Bubbles-payload/common/council/run_council.py", line 42
    pass
    ^
IndentationError: expected an indented block after 'with' statement on line 41
  File "/root/projects/Bubbles-payload/common/council/run_council.py", line 43
    pass pass
    ^
IndentationError: expected an indented block after 'with' statement on line 41
